--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,7 +24,11 @@
  "cells": [
   {
    "source": [
-    "# Header\n"
+    "# Начало\n",
+    "\n",
+    "Ссылка на 1 урок: https://live.skillbox.ru/webinars/code/pishem-model-mashinnogo-obucheniya-na-python110121/?utm_source=vk&utm_medium=messages&utm_campaign=all_all_vk_messages_invite_intensive-179-2021-01_all_code_skillbox&utm_content=2021-01-11&utm_term=intensive&ss_sub=5ff6d714f20fba5fd87ecf6e\n",
+    "\n",
+    "Ссылка на файл: https://drive.google.com/file/d/18Hyh1l9H3bR556W1tO2vKwpfAqZPueEp/view"
    ],
    "cell_type": "markdown",
    "metadata": {}
